@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2747767 by joachim: Changed the "Aggregation type" form element to radios.
 - #2565621 by LKS90, drunken monkey: Added a test for the database defaults
   submodule.
 - #2684465 by drunken monkey, marthinal: Fixed indexing of related entities on
